# mzekezeke

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  clippy.toml  docker-compose.yml  rust-toolchain.toml
core/src/dimensions/: acoustic.rs  atmospheric.rs  combined.rs  electromagnetic.rs  network.rs  spatial.rs  temporal.rs  thermal.rs
core/src/oscillatory/: entropy.rs  field_theory.rs  thermodynamics.rs
core/src/security/: attack_analysis.rs  threat_model.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/crypto/: dimensional_synthesis.rs  environmental_key.rs  mod.rs  temporal_encryption.rs  validation.rs
crates/core/src/theoretical/: consciousness_emergence.rs  mod.rs
crates/core/src/utils/: math.rs  mod.rs  serialization.rs  timing.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: main.rs
crates/mobile/: Cargo.toml
crates/mobile/src/: lib.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs
crates/sensors/: Cargo.toml
crates/sensors/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: main.rs
demos/: README.md  consciousness_computing_suite.py  decryption_process.py  dimensions_acquisition.py  encryption_process.py  mdtec_simple_demo_results.json  quick_start_consciousness_demo.py  requirements.txt  run_consciousness_demos.py  simple_demo.py  ultra_simple_demo.py  ultra_simple_proof.json  unified_framework.py
docs/: encryption.md  monkey-tail.tex  mzekezeke.aux  mzekezeke.fdb_latexmk  mzekezeke.fls  mzekezeke.md  mzekezeke.out  mzekezeke.tex  recursive-time-keeping.tex  structure.md
docs/systems/: buhera.md  iterative-compression-llm.tex  st-stellas-genome.tex
docs/theoretical_foundations/: oscillatory_truth_theory.tex
examples/: consciousness_simulation.rs  theoretical_demo.rs
proto/: mdtec.proto  sensors.proto
scripts/: build.ps1  build.sh  dev-setup.sh
