[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
    "crates/client",
    "crates/sensors",
    "crates/protocols",
    "crates/web-api",
    "crates/wasm",
    "crates/mobile",
    "crates/desktop"
]

[workspace.package]
version = "0.1.0"
authors = ["Kundai Farai Sachikonye <kundai@fullscreen-triangle.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fullscreen-triangle/mzekezeke"
homepage = "https://github.com/fullscreen-triangle/mzekezeke"
documentation = "https://docs.rs/mzekezeke"
keywords = ["cryptography", "environmental", "security", "zero-cost", "quantum-resistant"]
categories = ["cryptography", "network-programming", "science"]
description = "Zero-cost multi-dimensional environmental cryptography framework"

[workspace.dependencies]
# Core cryptographic dependencies
ring = "0.17"
chacha20poly1305 = "0.10"
sha3 = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
rand_core = "0.6"
subtle = "2.5"
zeroize = "1.7"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
protobuf = "3.4"
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# Async runtime and futures
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Web framework and HTTP
axum = { version = "0.7", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
hyper = { version = "1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Database and storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Networking and protocols
tonic = "0.10"
prost = "0.12"
websocket = "0.26"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
quickcheck = "1.0"
mockall = "0.12"

# Configuration and CLI
clap = { version = "4.4", features = ["derive", "env"] }
config = "0.14"
toml = "0.8"

# Mathematics and algorithms
nalgebra = "0.32"
ndarray = "0.15"
num-complex = "0.4"
rustfft = "6.2"

# Platform-specific dependencies
[target.'cfg(target_os = "android")'.workspace.dependencies]
jni = "0.21"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.workspace.dependencies]
objc = "0.2"
block = "0.1"

[target.'cfg(target_arch = "wasm32")'.workspace.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(windows)'.workspace.dependencies]
winapi = { version = "0.3", features = ["full"] }
windows = { version = "0.52", features = ["full"] }

[target.'cfg(unix)'.workspace.dependencies]
libc = "0.2"

# Development dependencies for the entire workspace
[workspace.dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
env_logger = "0.10"
serial_test = "3.0"

# Profiles for different build types
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.test]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1

# Custom profile for security-critical builds
[profile.security]
inherits = "release"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
codegen-units = 1

# Custom profile for WebAssembly builds
[profile.wasm]
inherits = "release"
opt-level = "s"  # Optimize for size
debug = false
lto = true
panic = 'abort'
