[package]
name = "mzekezeke-client"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai@fullscreen-triangle.com>"]
description = "Client library for Multi-Dimensional Temporal Ephemeral Cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fullscreen-triangle/mzekezeke"
keywords = ["cryptography", "client", "environmental", "mdtec"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core mzekezeke
mzekezeke-core = { path = "../core" }
mzekezeke-sensors = { path = "../sensors" }
mzekezeke-protocols = { path = "../protocols" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
uuid = { version = "1.0", features = ["v4", "serde"] }

[features]
default = []
wasm = ["mzekezeke-sensors/wasm"] 