[package]
name = "mzekezeke-core"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai@fullscreen-triangle.com>"]
description = "Core cryptographic algorithms for Multi-Dimensional Temporal Ephemeral Cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fullscreen-triangle/mzekezeke"
keywords = ["cryptography", "environmental", "physics", "security", "mdtec"]
categories = ["cryptography", "science"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ring = "0.17"
rand = "0.8"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
sha3 = "0.10"
blake3 = "1.5"

# Mathematical operations
num-bigint = "0.4"
num-traits = "0.2"
nalgebra = "0.32"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"
tokio-test = "0.4"

[[bench]]
name = "mdtec_benchmarks"
harness = false

[features]
default = ["std"]
std = []
no-std = []
profiling = ["criterion/html_reports"]
