[package]
name = "mzekezeke-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai@fullscreen-triangle.com>"]
description = "Desktop application for MDTEC"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fullscreen-triangle/mzekezeke"
keywords = ["desktop", "gui", "application", "cross-platform", "mdtec"]
categories = ["gui"]

[[bin]]
name = "mzekezeke-desktop"
path = "src/main.rs"

[dependencies]
# Core mzekezeke
mzekezeke-core = { path = "../core" }
mzekezeke-client = { path = "../client" }
mzekezeke-sensors = { path = "../sensors" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# GUI framework
egui = "0.24"
eframe = { version = "0.24", features = ["default_fonts", "persistence"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
uuid = { version = "1.0", features = ["v4", "serde"] }

# System integration
dirs = "5.0"

[features]
default = ["native"]
native = ["eframe/default_fonts"]
web = ["eframe/web_screen_reader"] 