[package]
name = "mzekezeke-protocols"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai@fullscreen-triangle.com>"]
description = "Network protocols for MDTEC communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fullscreen-triangle/mzekezeke"
keywords = ["protocols", "networking", "grpc", "websocket", "mdtec"]
categories = ["network-programming"]

[dependencies]
# Core mzekezeke
mzekezeke-core = { path = "../core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# gRPC
tonic = "0.10"
prost = "0.12"

# WebSocket
tokio-tungstenite = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.10"

[features]
default = ["grpc", "websocket"]
grpc = ["tonic", "prost", "tonic-build"]
websocket = ["tokio-tungstenite"] 