[package]
name = "mzekezeke-server"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai@fullscreen-triangle.com>"]
description = "Server implementation for Multi-Dimensional Temporal Ephemeral Cryptography"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fullscreen-triangle/mzekezeke"
keywords = ["cryptography", "server", "environmental", "mdtec"]
categories = ["cryptography", "network-programming"]

[dependencies]
# Core mzekezeke
mzekezeke-core = { path = "../core" }
mzekezeke-protocols = { path = "../protocols" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Networking
uuid = { version = "1.0", features = ["v4", "serde"] }

# Rate limiting
governor = "0.6"

# Security
jsonwebtoken = "9.0"

[[bin]]
name = "mzekezeke-server"
path = "src/main.rs"

[features]
default = []
metrics = ["prometheus"]
tracing = ["tracing/log"] 